@@ -1,4 +1,5 @@
 version 0.8.0 - currently working on
+- [#1923] Feature: Add stdWrap properties to the "tasks" field
 - [#2445] Fix: Replaced all calls to deprecated methods from oelib - now compatible with oelib >=0.5.0
 - [#2382] Fix: PHP error when loading oelib template helper due to camel-case filename
 
